Add tenant ID to verification request and implement invitation resending functionality; update invitation repository and service; enhance user role management and permissions; refactor frontend components for improved user experience.